--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,45 @@
     margin: 0 auto;
 }
 
-.card{
-    margin: 40px auto;
-    width: fit-content;
-    padding: 40px;
-    border-radius: 20px;
-    background-color: lightgrey;
+.app{
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.todoList{
+    display: flex;
+    flex-flow: column wrap;
+}
+
+h1{
+    font-size: 2.5em;
+}
+
+label{
+    font-size: 2em;
+}
+
+input{
+    border-radius: 20px 0 0 20px;
+    padding: 10px 20px;
+    font-size: 1.25em;
+}
+
+button{
+    border-radius: 0 20px 20px 0;
+    padding: 10px 20px;
+    font-size: 1.25em;
+}
+
+
+.btn{
+    border-radius: 12px;
+    padding: 10px 20px;
+    margin-top: 20px;
+}
+
+p{
+    font-size: 1.25em;
 }
