--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,23 @@ input{
     font-size: 1.25em;
 }
 
-button{
+.complete{
+    text-decoration: line-through;
+    opacity: 70%;
+}
+
+.todo{
+    background-color: whitesmoke;
+    border-radius: 20px;
+    padding: 10px 20px;
+    font-size: 1.5em;
+}
+
+.todoBtn{
+    border-radius: 20px;
+}
+
+.addTodoBtn{
     border-radius: 0 20px 20px 0;
     padding: 10px 20px;
     font-size: 1.25em;
